--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
       "types": "./lib/typescript/src/index.d.ts",
       "default": "./lib/module/index.js"
     },
+    "./plugin": {
+      "source": "./plugin/index.js",
+      "default": "./plugin/index.js"
+    },
     "./package.json": "./package.json"
   },
   "files": [
@@ -75,11 +79,13 @@
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
     "lefthook": "^2.0.3",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-builder-bob": "^0.40.17",
     "release-it": "^19.0.4",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2"
   },
   "peerDependencies": {
@@ -89,7 +95,7 @@
   "workspaces": [
     "example"
   ],
-  "packageManager": "yarn@4.11.0",
+  "packageManager": "yarn@3.6.4",
   "react-native-builder-bob": {
     "source": "src",
     "output": "lib",
@@ -156,5 +162,10 @@
       "release-it"
     ],
     "version": "0.56.1"
+  },
+  "dependencies": {
+    "nativewind": "^4.2.1",
+    "react-native-reanimated": "^4.2.1",
+    "react-native-safe-area-context": "5.4.0"
   }
 }
